@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Daemon-Generic
-version:      0.51
+version:      0.61
 version_from: lib/Daemon/Generic.pm
 installdirs:  site
 requires:
@@ -13,4 +13,4 @@ requires:
     Text::Wrap:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30_01
